Devops/Kubernetes/Kube-manifests/manifests-twitter-site/20-frontend/20-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    name: frontend
  name: frontend
  annotations:
        prometheus.io/scrape: 'true'
  namespace: twitter-website
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend
